    accessibility.svg, evolution.svg, fspot.svg, help.svg, openoffice.svg
    (LP: #428169)
  * Breathe icon fspot.svg has been replaced with its counterpart from the
    fspot source package.
  * Removed banshee.svg from source tree and removed mention of nonexistent
    icons from debian/copyright.
  * Updated translation templates for new slides.

 -- Dylan McCall <dylan@dylan-laptop>  Mon, 12 Oct 2009 10:00:13 -0700

ubiquity-slideshow-ubuntu (8) karmic; urgency=low

  [ Dylan McCall ]
  * Changed "Software Store" to "Software Center" since it has been renamed.

  [ Evan Dandrea ]
  * Updated translations from Launchpad.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 02 Oct 2009 12:28:50 +0100

ubiquity-slideshow-ubuntu (7) karmic; urgency=low

  [ Dylan McCall ]
  * Updated translation templates. The template for installing-software.html
    is entirely changed and should be translated again at some point. (Sorry,
    translators!) welcome.html and documentation.html are not quite as major,
    but if they were translated word-for-word they could probably use a
    do-over.
  * Merging my recent changes, including revised welcome and farewell slides.

  [ Evan Dandrea ]
  * Freeze exception (LP: #436063).
  * Update translations from Launchpad.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 25 Sep 2009 10:16:31 -0700

ubiquity-slideshow-ubuntu (6) karmic; urgency=low

  [ Evan Dandrea ]
  * The buildds do not install recommends by default, so add a build
    dependency on python-utidylib (LP: #430719).
  * Add the Firefox icon and a javascript-based reflection for it
    (LP: #421864).
  * Updated translations from Launchpad.

  [ Dylan McCall ]
  * Fixed comma splice in documentation.html
  * Corrected missing "with" in the third bullet point. Fixed title
    (LP: #427257, #427254).
  * Makefile now checks if po2html is installed and exits (slightly more)
    gracefully, albeit with rather horrendous looking output :)